[tool.poetry]
name = "profile_build_tools"
version = "0.1.1"
description = "APIからREADMEを自動作成するtools"
authors = ["atu4403 <73111778+atu4403@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
Pillow = "^8.1.2"
arrow = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
